2004-05-09(Sun) 03:33:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb, ndk_state.rb(nick_succ) :
	change nick.succ algorithm and timing(always change)

	* ndk_manager.rb : refactoring around nick and away nick

	* ndk_config.rb : change login timing action default
	to do nothing


2004-05-05(Wed) 17:19:14 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_version.rb : 0.5.5 prepared


2004-05-05(Wed) 16:24:03 +0900  Koichi Sasada  <ko1@atdot.net>

	* ChangeLog : change date format

	* 0.5.4 released


Sun, 02 May 2004 03:34:54 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadoka.rb : add location of nadoka.rb to load path


Sat, 01 May 2004 23:58:55 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : support nadoka control with signal
	and bot event on_sigusr[12]


Sat, 01 May 2004 23:04:40 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix typo


Sat, 01 May 2004 19:11:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* change source management system to Subversion
 

Sat, 01 May 2004 14:38:04 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix bootstrap process

	* rice/irc.rb : add easy flood control

	* 0.5.3 released


Sat, 01 May 2004 14:03:52 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix typo


Sat, 01 May 2004 13:24:14 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_config.rb : add nadoka server name

	* nadokarc : fix IRCnet servers

	* 0.5.2 released


Sat, 01 May 2004 06:35:28 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_logger.rb : added

	* ndk_bot.rb : add @bot_config

	* ndk_* : use @logger instead of @config to logging

	* ndk_config.rb : extend BotConfig format

	* ndk_manager.rb, rice/irc.rb : fix reconnect process

	* some refactoring


Fri, 30 Apr 2004 02:57:46 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : ignore(and report) exception while '/nadoka reload'
	reloading


Wed, 28 Apr 2004 11:24:23 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_err.rb : change exception hierarchy
